--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,6 @@
     <body>
         <h1>My Name: Kritsakorn Sripuritanont</h1>
         <p>Id: 6322772953</p>
+        <h1>My country: Thailand</h1>
     </body>
 </html>
