--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,6 @@
     <body>
         <h1>My Name: Kritsakorn Sripuritanont</h1>
         <p>Id: 6322772953</p>
-        <img src="https://graduateadmissions.siit.tu.ac.th/plugin/img/siitlogo.png" alt="">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fapplyadmissions.siit.tu.ac.th%2Fregister&psig=AOvVaw3Dj7hrPFCVL4BNpnN8Ac8H&ust=1699436115115000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPi1zYHLsYIDFQAAAAAdAAAAABAE" alt="">
     </body>
 </html>
